Add closing remarks in student view and complete sidebar

--- a/app/Resources/views/course_info/view/student_vertical_menu.html.twig
+++ b/app/Resources/views/course_info/view/student_vertical_menu.html.twig
@@ -4,6 +4,9 @@
             <a class="nav-link" href="#presentation-section">{{ 'app.view.student.sidebar.presentation' | trans }}</a>
         </li>
         <li class="nav-item vertical-text mt-2">
+            <a class="nav-link" href="#prerequisites-section">{{ 'app.view.student.sidebar.prerequisites' | trans }}</a>
+        </li>
+        <li class="nav-item vertical-text mt-2">
             <a class="nav-link" href="#objectives-section">{{ 'app.view.student.sidebar.objectives' | trans }}</a>
         </li>
         <li class="nav-item vertical-text mt-2">
@@ -14,6 +17,9 @@
         </li>
         <li class="nav-item vertical-text mt-2">
             <a class="nav-link" href="#information-section">{{ 'app.view.student.sidebar.info' | trans }}</a>
+        </li>
+        <li class="nav-item vertical-text mt-2">
+            <a class="nav-link" href="#closing-remarks-section">{{ 'app.view.student.sidebar.closing_remarks' | trans }}</a>
         </li>
     </ul>
 </nav>
