--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -12,6 +12,7 @@
                 {% include 'course_info/view/student_evaluation.html.twig' %}
                 {% include 'course_info/view/student_equipments.html.twig' %}
                 {% include 'course_info/view/student_info.html.twig' %}
+                {% include 'course_info/view/student_closing_remarks.html.twig' %}
             </div>
         </div>
     </div>
