--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -1,7 +1,3 @@
-.background_student {
-  //font-family: "Apex New Book";
-}
-
 .empty-element{
   margin: auto;
   background-color: #D8D8D8;
@@ -11,11 +7,15 @@
 .student-view {
   background-color: black;
   color: white;
-  padding-top: 2rem;
+  padding-top: 1rem;
+  font-family: "Apex New Book";
+
+  @media (min-width: 768px) {
+    padding-top: 2rem;
+  }
 
   #student-sidebar {
-    //top: 10px;
-    //left: 25px;
+    font-size: 0.9rem;
     position: fixed;
     z-index: 10;
     display: none;
