--- a/app/Resources/views/course_info/view/student_closing_remarks.html.twig
+++ b/app/Resources/views/course_info/view/student_closing_remarks.html.twig
@@ -1,25 +1,17 @@
 {% if courseInfo.closingRemarks is not null or courseInfo.closingVideo is not null %}
-    <section id="closing-remarks-section" class="content">
-        <div class="container-fluid">
-            <div class="card my-2 shadow">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between">
-                        <h3  class="text-shadow" style="font-weight: 500;">{{ 'app.view.student.tabs.closing_remarks' | trans }}</h3>
-                    </div>
-                </div>
-                <div class="card-body">
-                    {% if courseInfo.closingRemarks is not empty %}
-                        <div>
-                            {{ courseInfo.closingRemarks | humanizeEmptyData() | purify }}
-                        </div>
-                    {% endif %}
-                    {% if courseInfo.closingVideo is not empty %}
-                        <div class="embed-responsive embed-responsive-16by9">
-                            {{ courseInfo.closingVideo|raw  }}
-                        </div>
-                    {% endif %}
-                </div>
-            </div>
+    <section id="closing-remarks-section" class="pb-5">
+        <div class="student-title">
+            <h1 class="text-primary">{{ 'app.view.student.tabs.closing_remarks' | trans }}</h1>
         </div>
+        {% if courseInfo.closingRemarks is not empty %}
+            <div>
+                {{ courseInfo.closingRemarks | purify }}
+            </div>
+        {% endif %}
+        {% if courseInfo.closingVideo is not empty %}
+            <div class="embed-responsive embed-responsive-16by9">
+                {{ courseInfo.closingVideo|raw  }}
+            </div>
+        {% endif %}
     </section>
 {% endif %}
