--- a/app/Resources/views/course_info/view/student_prerequisite.html.twig
+++ b/app/Resources/views/course_info/view/student_prerequisite.html.twig
@@ -1,10 +1,10 @@
-<section id="prerequisite-section" class="pb-5">
+<section id="prerequisites-section" class="pb-5">
     <div class="student-title">
-        <h3 class="text-primary">{{ 'app.view.student.tabs.prerequisites' | trans }}</h3>
+        <h1 class="text-primary">{{ 'app.view.student.tabs.prerequisites' | trans }}</h1>
         <img type="image" src="{{ asset('/build/images/information_photo.jpg') }}" alt="">
     </div>
     <div class="student-grid">
-        <div class="grid-element">
+        <div class="grid-element grid-2-elements">
             {% if courseInfo.coursePrerequisites is not empty %}
                 <div class="student-subtitle">
                     <span class="text-bold">{{ 'app.view.student.prerequisites.prerequisites_description' | trans }}</span>
@@ -33,7 +33,7 @@
                 <div class="p-2 empty-element">{{ 'app.view.student.prerequisites.empty_prerequiste' | trans }}</div>
             {% endif %}
         </div>
-        <div class="grid-element">
+        <div class="grid-element  grid-2-elements">
             {% if courseInfo.courseTutoringResources is not empty %}
                 <div class="student-subtitle">
                     <span class="text-bold">{{ 'app.view.student.prerequisites.tutoring_resources_description' | trans }}</span>
