--- a/app/Resources/views/course_info/view/student_vertical_menu.html.twig
+++ b/app/Resources/views/course_info/view/student_vertical_menu.html.twig
@@ -10,6 +10,9 @@
             <a class="nav-link" href="#objectives-section">{{ 'app.view.student.sidebar.objectives' | trans }}</a>
         </li>
         <li class="nav-item vertical-text mt-2">
+            <a class="nav-link" href="#activities-section">{{ 'app.view.student.sidebar.activity' | trans }}</a>
+        </li>
+        <li class="nav-item vertical-text mt-2">
             <a class="nav-link" href="#evaluation-section">{{ 'app.view.student.sidebar.evaluation' | trans }}</a>
         </li>
         <li class="nav-item vertical-text mt-2">
