--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -9,6 +9,7 @@
                 {% include 'course_info/view/student_presentation.html.twig' %}
                 {% include 'course_info/view/student_prerequisite.html.twig' %}
                 {% include 'course_info/view/student_objectives.html.twig' %}
+                {% include 'course_info/view/student_activities.html.twig' %}
                 {% include 'course_info/view/student_evaluation.html.twig' %}
                 {% include 'course_info/view/student_equipments.html.twig' %}
                 {% include 'course_info/view/student_info.html.twig' %}
