moodle permission importer v1

--- a/app/Resources/assets/scss/student_view.scss
+++ b/app/Resources/assets/scss/student_view.scss
@@ -198,6 +198,8 @@
 
     .presentation-info {
       background-color: $dark-light;
+      margin-left: 0;
+      margin-right: 0;
 
       .student-subtitle {
         margin-bottom: 0;
