--- a/app/Resources/views/course_info/view/student_activities.html.twig
+++ b/app/Resources/views/course_info/view/student_activities.html.twig
@@ -3,40 +3,37 @@
         <h1 class="text-primary">{{ 'app.view.student.tabs.activities' | trans }}</h1>
         <img src="{{ asset('build/images/programmation_photo.jpg') }}" alt="">
     </div>
-    <div class="d-flex flex-column align-items-center">
-        <ul class="list list-group w-100">
+        <ul class="student-sections">
             {% for section in courseInfo.courseSections %}
                 {% if section.courseSectionActivities is not empty %}
-                    <li class="presentation-info shadow list-group-item mb-3 pr-1">
-                        <div class="text-bold px-1 d-flex row w-100 justify-content-between align-items-center collapsed" style="cursor: pointer;"
-                             data-toggle="collapse" data-target="#activity-{{ section.id }}"
+                    <li>
+                        <div class="student-section-header" data-toggle="collapse" data-target="#activity-{{ section.id }}"
                              aria-expanded="false" aria-controls="Title">
-                            {{ section.title }}
-                            <img class="rotate-l180 icon-20 text-right" src="{{ asset('build/images/collapsed-arrow.png') }}" alt=""/>
+                            <span class="student-section-title">{{ section.title }}</span>
+                            <img class="icon-20" src="{{ asset('build/images/collapsed-arrow.png') }}" alt=""/>
+                        </div>
+                        <div class="collapse mb-2" id="activity-{{ section.id }}">
+                            {% if section.url %}
+                                <div class="text-right">
+                                    <a href="{{ section.url }}" target="_blank">
+                                        <u>{{ 'app.view.student.activities.section_url' | trans }}</u>
+                                    </a>
+                                </div>
+                            {% endif %}
+                            <div class="bg-black">
+                                <ul class="student-list">
+                                    {% for courseSectionActivity in section.courseSectionActivities %}
+                                        <li>
+                                            <i class="fas fa-check text-primary"></i>[{{ courseSectionActivity.activityType }}] {{ courseSectionActivity.activity.label }} - {{ courseSectionActivity.activityMode }}
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
                         </div>
                     </li>
-                    <div class="collapse mb-2" id="activity-{{ section.id }}">
-                        {% if section.url %}
-                            <div class="text-right">
-                                <a href="{{ section.url }}" target="_blank">
-                                    <u>{{ 'app.view.student.activities.section_url' | trans }}</u>
-                                </a>
-                            </div>
-                        {% endif %}
-                        <div class="bg-black">
-                            <ul class="student-list">
-                                {% for courseSectionActivity in section.courseSectionActivities %}
-                                    <li>
-                                        <i class="fas fa-check text-primary"></i>[{{ courseSectionActivity.activityType }}] {{ courseSectionActivity.activity.label }} - {{ courseSectionActivity.activityMode }}
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
                 {% endif %}
             {% endfor %}
         </ul>
-    </div>
 </section>
 {#
     <div class="mt-2">
