--- a/app/Resources/views/course_info/view/view.html.twig
+++ b/app/Resources/views/course_info/view/view.html.twig
@@ -10,10 +10,18 @@
                 {% include 'course_info/view/student_prerequisite.html.twig' %}
                 {% include 'course_info/view/student_objectives.html.twig' %}
                 {% include 'course_info/view/student_activities.html.twig' %}
-                {% include 'course_info/view/student_evaluation.html.twig' %}
-                {% include 'course_info/view/student_equipments.html.twig' %}
-                {% include 'course_info/view/student_info.html.twig' %}
-                {% include 'course_info/view/student_closing_remarks.html.twig' %}
+                {% if (courseInfo | displayValidator('evaluation_empty')) == true %}
+                    {% include 'course_info/view/student_evaluation.html.twig' %}
+                {% endif %}
+                {% if (courseInfo | displayValidator('equipments_empty')) == true %}
+                    {% include 'course_info/view/student_equipments.html.twig' %}
+                {% endif %}
+                {% if (courseInfo | displayValidator('info_empty')) == true %}
+                    {% include 'course_info/view/student_info.html.twig' %}
+                {% endif %}
+                {% if (courseInfo | displayValidator('closing_remarks_empty')) == true %}
+                    {% include 'course_info/view/student_closing_remarks.html.twig' %}
+                {% endif %}
             </div>
         </div>
     </div>
