hide info section, "autre' equipment description required

--- a/app/Resources/views/course_info/equipment/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/equipment.html.twig
@@ -21,7 +21,7 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <h3>{{ 'app.equipment.view.resources' | trans }}</h3>
-                    <button type="button" class="edit-button btn btn-primary rounded" data-title="{{ 'app.equipment.view.edit' | trans }}"
+                    <button type="button" class="edit-button btn btn-primary rounded" data-title="{{ 'app.equipment.view.edit' | trans }}">
                         {{ 'app.equipment.view.edit' | trans }}
                     </button>
                 </div>
