--- a/app/Resources/views/course_info/view/student_equipments.html.twig
+++ b/app/Resources/views/course_info/view/student_equipments.html.twig
@@ -5,51 +5,54 @@
     </div>
 
     <div class="student-grid">
-        <div class="grid-element">
-            <div class="student-subtitle mb-3">
-                <img src="{{ asset('build/images/biblio_picto.png') }}" class="icon-40" alt="">
-                <h5 class="title-underlined">{{ 'app.view.student.equipments.bibliographic_resources' | trans }}</h5>
+        {% if courseInfo.bibliographicResources is not empty %}
+            <div class="grid-element">
+                <div class="student-subtitle mb-3">
+                    <img src="{{ asset('build/images/biblio_picto.png') }}" class="icon-40" alt="">
+                    <h5 class="title-underlined">{{ 'app.view.student.equipments.bibliographic_resources' | trans }}</h5>
+                </div>
+                <div class="student-ressources">
+                    {{ courseInfo.bibliographicResources | humanizeEmptyData() | purify }}
+                </div>
             </div>
-            <div class="student-ressources">
-                {{ courseInfo.bibliographicResources | humanizeEmptyData() | purify }}
+        {% endif %}
+        {% if courseInfo.educationalResources is not empty %}
+            <div class="grid-element">
+                <div class="student-subtitle mb-3">
+                    <img src="{{ asset('build/images/biblio_picto.png') }}" class="icon-40" alt="">
+                    <h5 class="title-underlined">{{ 'app.view.student.equipments.educational_resources' | trans }}</h5>
+                </div>
+                <div class="student-ressources">
+                    {{ courseInfo.educationalResources | humanizeEmptyData() | purify }}
+                </div>
             </div>
-        </div>
-
-        <div class="grid-element">
-            <div class="student-subtitle mb-3">
-                <img src="{{ asset('build/images/biblio_picto.png') }}" class="icon-40" alt="">
-                <h5 class="title-underlined">{{ 'app.view.student.equipments.educational_resources' | trans }}</h5>
-            </div>
-            <div class="student-ressources">
-                {{ courseInfo.educationalResources | humanizeEmptyData() | purify }}
-            </div>
-        </div>
-
-        <div class="grid-element">
-            <div class="student-subtitle mb-3">
-                <img src="{{ asset('build/images/materiel_picto.png') }}" class="icon-40" alt="">
-                <h5 class="title-underlined">{{ 'app.view.student.equipments.required_equipments' | trans }}</h5>
-            </div>
-            <ul class="student-list">
-                {% for resourceEquipment in courseInfo.courseResourceEquipments %}
-                    {% if resourceEquipment.equipment.labelVisibility == true or resourceEquipment.description is not null %}
-                        <li>
-                            <i class="fas fa-check"></i>
-                            <div class="d-flex flex-column">
-                                {% if resourceEquipment.equipment.labelVisibility == true %}
-                                    <span>{{ resourceEquipment.equipment.label }}</span>
+        {% endif %}
+        {% if courseInfo.courseResourceEquipments is not empty %}
+            <div class="grid-element">
+                <div class="student-subtitle mb-3">
+                    <img src="{{ asset('build/images/materiel_picto.png') }}" class="icon-40" alt="">
+                    <h5 class="title-underlined">{{ 'app.view.student.equipments.required_equipments' | trans }}</h5>
+                </div>
+                <ul class="student-list">
+                    {% for resourceEquipment in courseInfo.courseResourceEquipments %}
+                        {% if resourceEquipment.equipment.labelVisibility == true or resourceEquipment.description is not null %}
+                            <li>
+                                <i class="fas fa-check"></i>
+                                <div class="d-flex flex-column">
                                     {% if resourceEquipment.equipment.labelVisibility == true %}
-                                        <span class="small font-italic">{{ resourceEquipment.description }}</span>
+                                        <span>{{ resourceEquipment.equipment.label }}</span>
+                                        {% if resourceEquipment.equipment.labelVisibility == true %}
+                                            <span class="small font-italic">{{ resourceEquipment.description }}</span>
+                                        {% endif %}
+                                    {% elseif resourceEquipment.equipment.labelVisibility == false and resourceEquipment.description is not null %}
+                                        <span>{{ resourceEquipment.description }}</span>
                                     {% endif %}
-                                {% elseif resourceEquipment.equipment.labelVisibility == false and resourceEquipment.description is not null %}
-                                    <span>{{ resourceEquipment.description }}</span>
-                                {% endif %}
-                            </div>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-
-        </div>
+                                </div>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
     </div>
 </section>
