--- a/app/Resources/views/course_info/view/student_evaluation.html.twig
+++ b/app/Resources/views/course_info/view/student_evaluation.html.twig
@@ -5,24 +5,30 @@
     </div>
     <div class="row">
         <div class="col col-12 col-lg-5 pr-5 mb-4">
-            <div class="mb-4">
-                {{ 'app.evaluation.view.continuous_assessment' | trans }}
-                {% if courseInfo.mccCcCoeffSession1 is not null %}
+            {% if courseInfo.mccCcCoeffSession1 is not null %}
+                <div class="mb-4">
+                    {{ 'app.evaluation.view.continuous_assessment' | trans }}
                     ({{ courseInfo.mccCcCoeffSession1 }}%)
                     <div class="progress student-progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{ courseInfo.mccCcCoeffSession1 }}%;" aria-valuenow="{{ courseInfo.mccCcCoeffSession1 }}" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar"
+                             style="width: {{ courseInfo.mccCcCoeffSession1 }}%;"
+                             aria-valuenow="{{ courseInfo.mccCcCoeffSession1 }}" aria-valuemin="0"
+                             aria-valuemax="100"></div>
                     </div>
-                {% endif %}
-            </div>
-            <div>
-                {{ 'app.evaluation.view.exam' | trans }}
-                {% if courseInfo.mccCtCoeffSession1 is not null %}
+                </div>
+            {% endif %}
+            {% if courseInfo.mccCtCoeffSession1 is not null %}
+                <div>
+                    {{ 'app.evaluation.view.exam' | trans }}
                     ({{ courseInfo.mccCtCoeffSession1 }}%)
                     <div class="progress student-progress">
-                        <div class="progress-bar" role="progressbar" style="width: {{ courseInfo.mccCtCoeffSession1 }}%;" aria-valuenow="{{ courseInfo.mccCtCoeffSession1 }}" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar" role="progressbar"
+                             style="width: {{ courseInfo.mccCtCoeffSession1 }}%;"
+                             aria-valuenow="{{ courseInfo.mccCtCoeffSession1 }}" aria-valuemin="0"
+                             aria-valuemax="100"></div>
                     </div>
-                {% endif %}
-            </div>
+                </div>
+            {% endif %}
         </div>
         <div class="col col-12 col-lg-7 mb-4">
             <p>
@@ -30,8 +36,10 @@
             </p>
         </div>
     </div>
-    <div>
-        <span class="text-bold">{{ 'app.evaluation.view.specifications' | trans }}</span>
-        <div>{{ courseInfo.mccAdvice|humanizeEmptyData() | purify }}</div>
-    </div>
+    {% if courseInfo.mccAdvice is not null %}
+        <div>
+            <span class="text-bold">{{ 'app.evaluation.view.specifications' | trans }}</span>
+            <div>{{ courseInfo.mccAdvice|humanizeEmptyData() | purify }}</div>
+        </div>
+    {% endif %}
 </section>
