--- a/app/Resources/views/course_info/view/student_info.html.twig
+++ b/app/Resources/views/course_info/view/student_info.html.twig
@@ -4,21 +4,25 @@
         <img src="{{ asset('build/images/information_photo.jpg') }}" alt="">
     </div>
     <div class="student-grid">
-        <div class="grid-element grid-2-elements">
-            <div class="student-subtitle mb-3">
-                <img src="{{ asset('build/images/calendrier_picto.png') }}" class="icon-40" alt="">
-                <h5 class="title-underlined">{{ 'app.view.student.info.agenda' | trans }}</h5>
+        {% if courseInfo.agenda is not empty %}
+            <div class="grid-element grid-2-elements">
+                <div class="student-subtitle mb-3">
+                    <img src="{{ asset('build/images/calendrier_picto.png') }}" class="icon-40" alt="">
+                    <h5 class="title-underlined">{{ 'app.view.student.info.agenda' | trans }}</h5>
+                </div>
+                {{ courseInfo.agenda|purify }}
             </div>
-            {{ courseInfo.agenda|purify }}
-        </div>
-        <div class="grid-element grid-2-elements">
-            <div class="student-subtitle mb-3">
-                <img src="{{ asset('build/images/organisation_picto.png') }}" class="icon-40" alt="">
-                <h5 class="title-underlined">{{ 'app.view.student.info.organization' | trans }}</h5>
+        {% endif %}
+        {% if courseInfo.organization is not empty %}
+            <div class="grid-element grid-2-elements">
+                <div class="student-subtitle mb-3">
+                    <img src="{{ asset('build/images/organisation_picto.png') }}" class="icon-40" alt="">
+                    <h5 class="title-underlined">{{ 'app.view.student.info.organization' | trans }}</h5>
+                </div>
+                <div>
+                    {{ courseInfo.organization|purify }}
+                </div>
             </div>
-            <div>
-                {{ courseInfo.organization|purify }}
-            </div>
-        </div>
+        {% endif %}
     </div>
 </section>
