Add syllabus year in edit sidebar + Fix activities migration command

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -15,6 +15,9 @@
 
 {% block sidebar %}
     <div class="sidebar">
+            <h4 class="text-white text-center py-3 border-bottom">
+                {{ courseInfo.year.label }}
+            </h4>
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column user-panel" data-widget="treeview" role="menu"
                 data-accordion="false">
