--- a/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
+++ b/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
@@ -1,11 +1,11 @@
 <div class="teaching-mode teaching-mode-class d-none">
     <label>{{ 'app.presentation.form.teaching_mode.additionnal' | trans }}</label>
     {{ form_errors(form.teachingOtherTypeClass) }}
-    <div class="row">
-        <div class="col-sm" style="max-width: 120px;">
+    <div class="d-flex">
+        <div class="mr-2" style="max-width: 120px;">
             {{ form_widget(form.teachingOtherClass) }}
         </div>
-        <div class="col-sm">
+        <div>
             {{ form_widget(form.teachingOtherTypeClass) }}
         </div>
     </div>
