--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -81,11 +81,11 @@
     </div>
 </div>
 <div class="mt-2">
-    <button type="submit" class="submit-button btn btn-primary submit rounded"
+    <button type="submit" class="button-orange submit-button btn submit"
             data-url="{{ path('app.course_info.presentation.general', {'id': courseInfo.id}) }}">
         {{ 'app.general.button.save' | trans }}
     </button>
-    <button type="button" class="cancel-button btn btn-secondary rounded"
+    <button type="button" class="btn-link text-black cancel-button btn rounded"
             data-url="{{ path('app.course_info.presentation.general', {'id': courseInfo.id}) }}">
         {{ 'app.general.button.cancel' | trans }}
     </button>
