--- a/app/Resources/views/course_info/presentation/form/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teachers.html.twig
@@ -11,7 +11,7 @@
     {{ form_widget(form.manager) }}
 </div>
 <div class="d-flex justify-content-center mt-3">
-    <button type="submit" class="btn btn-primary rounded" id="create_button">
+    <button type="submit" class="btn button-orange" id="create_button">
         {{ 'app.general.button.add' | trans }}
     </button>
 </div>
