--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -3,28 +3,27 @@
 {{ form_start(form, {'attr': {'class': 'form-focus', 'id' : 'form-focus-teaching' }}) }}
 {{ form_errors(form) }}
 
-<div class="row">
-    <div id="teaching-mode-container" class="col-lg-5" data-type-hybrid="{{ constant('AppBundle\\Constant\\TeachingMode::HYBRID') }}">
+<div class="d-flex flex-wrap">
+    <div id="teaching-mode-container" class="mr-auto" data-type-hybrid="{{ constant('AppBundle\\Constant\\TeachingMode::HYBRID') }}">
         <label class="required font-weight-bold">{{ 'app.presentation.form.teaching_mode.label' | trans }}</label>
         {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
     </div>
-    <div class="col-lg-7">
-
-        <label class="font-weight-bold">{{ 'app.presentation.form.teaching_mode.volumes' | trans }}</label>
-        <div class="row mb-3">
+    <div class="p-2 bg-lightgrey text-center">
+        <label class="font-weight-bold text-gray">{{ 'app.presentation.form.teaching_mode.volumes' | trans }}</label>
+        <div class="d-flex flex-wrap mb-3">
             {% if courseInfo.teachingCmClass is not null %}
-                <div class="col-lg-4 col-md-6 col-12">
-                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.cm', 'teachingTypeHours': courseInfo.teachingCmClass } %}
+                <div class="mr-2">
+                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.cm', 'teachingTypeHours': courseInfo.teachingCmClass, 'greyTheme': true } %}
                 </div>
             {% endif %}
             {% if courseInfo.teachingTdClass is not null %}
-                <div class="col-lg-4 col-md-6 col-12">
-                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdClass } %}
+                <div class="mr-2">
+                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdClass, 'greyTheme': true } %}
                 </div>
             {% endif %}
             {% if courseInfo.teachingTpClass is not null %}
-                <div class="col-lg-4 col-md-6 col-12">
-                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.tp', 'teachingTypeHours': courseInfo.teachingTpClass } %}
+                <div>
+                    {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.tp', 'teachingTypeHours': courseInfo.teachingTpClass, 'greyTheme': true } %}
                 </div>
             {% endif %}
         </div>
@@ -35,7 +34,7 @@
     {% include 'course_info/presentation/form/_teaching_mode_distant.html.twig' %}
     {% include 'course_info/presentation/form/_teaching_mode_hybrid.html.twig' %}
 
-{#    ======================================================Teaching======================================================#}
+    {#    ======================================================Teaching======================================================#}
     {% import 'macro/_course_info.html.twig' as macros %}
 
     {% set teachingClassForm = [] %}
@@ -51,11 +50,9 @@
     {% endfor %}
     <div class="row">
         <div class="col-6 teaching-fields-list-container" id="teaching-fields-list-container-{{ constant('AppBundle\\Constant\\TeachingMode::IN_CLASS') }}">
-            <label>{{ form.teachings.vars.label|trans }}</label>
             {{ _self.printTeachingModeContainer(teachingClassForm, constant('AppBundle\\Constant\\TeachingMode::IN_CLASS'), teachingPrototype ) }}
         </div>
         <div class="col-6 teaching-fields-list-container" id="teaching-fields-list-container-{{ constant('AppBundle\\Constant\\TeachingMode::DIST') }}">
-            <label>{{ form.teachings.vars.label|trans }}</label>
             {{ _self.printTeachingModeContainer(teachingDistantForm, constant('AppBundle\\Constant\\TeachingMode::DIST'), teachingPrototype ) }}
         </div>
     </div>
@@ -66,7 +63,7 @@
              class="teaching-fields-list"
              data-prototype="{{ macros.printTeachingRow(teachingPrototype, mode)|e('html_attr') }}"
              data-widget-tags="{{ '<div></div>'|e }}"
-             >
+        >
             {% for teachingForm in forms %}
                 <div>
                     {{ macros.printTeachingRow(teachingForm, mode) }}
@@ -74,19 +71,16 @@
             {% endfor %}
         </div>
 
-        <div class="row mb-3">
-            <div class="col-12">
-
-                <button type="button"
-                        class="add-another-teaching-widget btn btn-outline-primary mr-0"
-                        data-list-selector="#teaching-fields-list-{{ mode }}"
-                        data-prototype-recipient="#teaching-fields-list-class"
-                        data-mode="{{ mode }}"
-                >
-                    <i class="fas fa-plus-circle"></i>
-                    {{ 'app.presentation.form.teaching_mode.add_other'|trans }}
-                </button>
-            </div>
+        <div class="d-flex mb-3">
+            <button type="button"
+                    class="add-another-teaching-widget btn btn-outline-primary mr-0"
+                    data-list-selector="#teaching-fields-list-{{ mode }}"
+                    data-prototype-recipient="#teaching-fields-list-class"
+                    data-mode="{{ mode }}"
+            >
+                <i class="fas fa-plus-circle"></i>
+                {{ 'app.presentation.form.teaching_mode.add_other'|trans }}
+            </button>
         </div>
 
 
@@ -101,11 +95,11 @@
 </div>
 
 <div class="mt-2">
-    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
+    <button type="submit" class="submit-button btn button-orange submit" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
         {{ 'app.general.button.save' | trans }}
     </button>
-    <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
-        {{ 'app.general.button.cancel' | trans }}
+    <button type="button" class="btn-link cancel-button btn text-black" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
+        <u>{{ 'app.general.button.cancel' | trans }}</u>
     </button>
 </div>
 {{ form_widget(form._token) }}
@@ -120,7 +114,7 @@
         function toggleTeachingMode() {
 
             let mode = $teachingMode.find('input[type="radio"]:checked').val();
-
+            console.log(mode);
             let hybrid = $('#teaching-mode-container').data('type-hybrid');
 
 
