--- a/app/Resources/views/course_info/prerequisite/prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/prerequisite.html.twig
@@ -8,7 +8,7 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <h3>{{ 'app.prerequisites.view.prerequisites' | trans }}</h3>
-                    <button type="button" class="btn btn-primary modal-action rounded"
+                    <button type="button" class="btn button-orange modal-action"
                             data-action-title="{{ 'app.prerequisites.view.add_prerequisite' | trans }}"
                             data-action-url="{{ path('app.course_info.prerequisite.prerequisite.add', {'id': courseInfo.id }) }}">
                         {{ 'app.prerequisites.view.add_prerequisite' | trans }}
@@ -25,7 +25,7 @@
             <div class="card-header">
                 <div class="d-flex justify-content-between">
                     <h3>{{ 'app.prerequisites.view.tutoring_resource' | trans }}</h3>
-                    <button type="button" class="btn btn-primary modal-action rounded "
+                    <button type="button" class="btn button-orange modal-action"
                             data-action-title="{{ 'app.prerequisites.view.add_tutoring_resource' | trans }}"
                             data-card="card-tutoring-resources"
                             data-action-url="{{ path('app.course_info.prerequisite.tutoring_resource.add', {'id': courseInfo.id }) }}">
