--- a/app/Resources/views/course_info/objectives_course/form/achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/achievement.html.twig
@@ -14,7 +14,7 @@
     </div>
 </div>
 <div class="d-flex justify-content-center mt-3">
-    <button type="submit" class="btn btn-primary rounded" id="create_button">
+    <button type="submit" class="btn button-orange" id="create_button">
         {{ 'app.objectives.form.add' | trans }}
     </button>
 </div>
