--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -10,7 +10,7 @@
                 <div class="d-flex justify-content-between">
                     <h3>{{ 'app.objectives.view.aimed_capacities' | trans }}</h3>
                     <button type="button"
-                            class="btn btn-primary rounded modal-action"
+                            class="btn button-orange modal-action"
                             data-action-title="{{ 'app.objectives.view.add_capacity' | trans }}"
                             data-action-url="{{ path('app.course_info.objectives.achievement.add', {'id': courseInfo.id }) }}">
                         {{ 'app.objectives.view.add_capacity' | trans }}
