--- a/app/Resources/views/course_info/objectives_course/form/edit_achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/edit_achievement.html.twig
@@ -5,7 +5,7 @@
     <div class="col">
         <div>
             <div>
-                <label>À la fin de ce cours, l'étudiant devrait être capable de…</label>
+                <label>{{ 'app.objectives.form.description' | trans }}</label>
                 {% if form.description is defined %}
                     {{ form_widget(form.description) }}
                 {% endif %}
@@ -14,8 +14,8 @@
     </div>
 </div>
 <div class="d-flex justify-content-center mt-3">
-    <button type="submit" class="btn btn-primary rounded" id="create_button">
-        Ajouter
+    <button type="submit" class="btn button-orange" id="create_button">
+        {{ 'app.objectives.form.edit' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
