--- a/app/Resources/views/course_info/evaluation/form/specifications.html.twig
+++ b/app/Resources/views/course_info/evaluation/form/specifications.html.twig
@@ -7,10 +7,10 @@
 {{ form_errors(form.mccAdvice) }}
 {{ form_widget(form.mccAdvice) }}
 <div class="mt-2">
-    <button type="submit" class="submit-button btn btn-primary submit rounded" data-url="{{ path('app.course_info.evaluation.specifications', {'id': courseInfo.id}) }}">
+    <button type="submit" class="submit-button btn button-orange submit" data-url="{{ path('app.course_info.evaluation.specifications', {'id': courseInfo.id}) }}">
         {{ 'app.evaluation.form.save' | trans }}
     </button>
-    <button type="button" class="cancel-button btn btn-secondary rounded" data-url="{{ path('app.course_info.evaluation.specifications', {'id': courseInfo.id}) }}">
+    <button type="button" class="cancel-button btn btn-link text-dark" data-url="{{ path('app.course_info.evaluation.specifications', {'id': courseInfo.id}) }}">
         {{ 'app.evaluation.form.cancel' | trans }}
     </button>
 </div>
