--- a/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
+++ b/app/Resources/views/course_info/equipment/form/resource_equipment_edit.html.twig
@@ -12,8 +12,8 @@
     </div>
 </div>
 <div class="d-flex justify-content-center mt-3">
-    <button type="submit" class="btn btn-primary rounded" id="create_button">
-        {{ 'app.equipment.form.add' | trans }}
+    <button type="submit" class="btn button-orange" id="create_button">
+        {{ 'app.equipment.form.edit' | trans }}
     </button>
 </div>
 {{ form_widget(form._token) }}
