--- a/app/Resources/views/course_info/closing_remarks/form/closing_remarks.html.twig
+++ b/app/Resources/views/course_info/closing_remarks/form/closing_remarks.html.twig
@@ -16,7 +16,7 @@
             data-url="{{ path('app.course_info.closing_remarks.closing_remarks', {'id': courseInfo.id, 'action': 'submit' }) }}">
         {{ 'app.closing_remarks.form.save' | trans }}
     </button>
-    <button type="button" class="text-dark cancel-button btn btn-link"
+    <button type="button" class="btn-link btn text-black"
             data-url="{{ path('app.course_info.closing_remarks.closing_remarks', {'id': courseInfo.id, 'action': 'cancel' }) }}">
         <u>{{ 'app.closing_remarks.form.cancel' | trans }}</u>
     </button>
