--- a/app/Resources/views/course_info/equipment/form/resource.html.twig
+++ b/app/Resources/views/course_info/equipment/form/resource.html.twig
@@ -22,7 +22,7 @@
             data-url="{{ path('app.course_info.resource_equipment.resources', {'id': courseInfo.id, 'action': 'submit' }) }}">
         {{ 'app.equipment.form.save' | trans }}
     </button>
-    <button type="button" class="cancel-button btn btn-link text-dark"
+    <button type="button" class="btn-link btn text-black"
             data-url="{{ path('app.course_info.resource_equipment.resources', {'id': courseInfo.id, 'action': 'cancel' }) }}">
         <u>{{ 'app.equipment.form.cancel' | trans }}</u>
     </button>
