--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -85,7 +85,7 @@
             data-url="{{ path('app.course_info.presentation.general', {'id': courseInfo.id}) }}">
         {{ 'app.general.button.save' | trans }}
     </button>
-    <button type="button" class="btn-link text-black cancel-button btn rounded"
+    <button type="button" class="btn-link btn text-black"
             data-url="{{ path('app.course_info.presentation.general', {'id': courseInfo.id}) }}">
         <u>{{ 'app.general.button.cancel' | trans }}</u>
     </button>
